plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'lol.aabss'
version = '1.2'

repositories {
    mavenCentral()
    maven {url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"}
    maven {url = "https://oss.sonatype.org/content/groups/public/"}
    maven {url = "https://repo.skriptlang.org/releases"}
    maven {url = "https://jitpack.io"}
}

dependencies {
    implementation "org.jetbrains:annotations:24.0.0"
    implementation 'com.github.SkriptLang:skript-reflect:2.4-dev1'
    compileOnly "org.spigotmc:spigot-api:1.21-R0.1-SNAPSHOT"
    implementation "com.github.SkriptLang:Skript:2.7.0"
    implementation "com.github.ItsRadiiX:Definity-Webhooks:f051e1fa3e"
}

shadowJar {
    dependencies {
        include(dependency("com.github.ItsRadiiX:Definity-Webhooks:f051e1fa3e"))
    }
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-source', '17', '-target', '17']
}
processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}
